# klibcpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  Readme.md  kedixa-config.cmake.in
doc/: bigint.md  multiarray.md  rational.md  unsigned_bigint.md
docs/: timer.md  unsigned_bigint.md
include/: bigint.h  multiarray.h  rational.h  timer.h  unsigned_bigint.h
include/kedixa/: bigint.h  multiarray.h  rational.h  timer.h  unsigned_bigint.h
src/: CMakeLists.txt  bigint.cpp  multiarray.h  rational.cpp  timer.h  unsigned_bigint.cpp
test/: CMakeLists.txt  Makefile  test_bigint.cpp  test_multiarray.cpp  test_rational.cpp  test_timer.cpp  test_unsigned_bigint.cpp
test/multiarray/: Makefile  multiarray.md  test_multiarray.cpp
test/timer/: Makefile  timer.md
